more unique styling, squashed out some bugs, outline for backspace impl.

--- a/src/index.css
+++ b/src/index.css
@@ -18,53 +18,64 @@ body {
 
 .main-container {
   display: flex;
-  flex-direction: row;
   flex-grow: 1;
 }
 
 .tabs-container {
   display: flex;
-  flex-direction: row;
-  background-color: #181818;
   position: sticky;
   top: 0;
   z-index: 2;
+  background-color: rgb(42, 38, 38);
 }
 
 .tab {
   display: flex;
-  flex-direction: row;
   align-items: center;
   padding-top: 8px;
   padding-bottom: 8px;
-  padding-left: 2em;
-  border-top: 2px solid #0078d4;
   border-right: 1px solid #2b2b2b;
   color: white;
   background-color: #1f1f1f;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
 }
 
 .tab-name {
   font-size: 15px;
   font-weight: 600;
+  margin-left: 10px;
+  width: 10rem;
+  overflow: hidden;
+}
+
+.tab-close-button {
+  height: 10px;
+  width: 10px;
+  background-color: red;
+  margin-left: 12px;
+  margin-right: 10px;
 }
 
 .editor-container {
   display: flex;
-  flex-direction: row;
   height: 100%;
   flex-grow: 1;
 }
 
 .line-container {
   flex: 1;
-  background-color: #1f1f1f;
+  background-color: #1b1c26;
   cursor: text;
 }
 
 .line {
   position: relative;
   height: 1em;
+}
+
+.line:focus {
+  background-color: red;
 }
 
 .default-line-text {
@@ -87,6 +98,7 @@ body {
   font-size: 13px;
   color: #6e7681;
   margin: auto;
+  font-family: "DM Mono", monospace;
 }
 
 .line-numbers-column {
